--- a/ano1.html
+++ b/ano1.html
@@ -15,7 +15,7 @@
         <div class="nocolor1">
             <div class="introduction">
                <div class="logo">
-                    <img src="./image/logo.png">
+                    <img src="/IFMT-html-Projeto-main/image/logo.png">
                 </div>
                 <h1>Segue abaixo a <strong>matriz curricular</strong> do <strong>curso de TI integrado ao ensino médio.</strong> do 1° ano</h1>
             </div>
